<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_emergency"
        android:icon="@drawable/ic_emergency"
        android:title="Emergency"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_subscription"
        android:title="@string/subscription"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_invite_members"
        android:title="@string/invite_members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_members"
        android:title="@string/members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_profile"
        android:title="@string/edit_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="Logout"
        app:showAsAction="never" />

</menu>
